force-app/main/default/objects/Account/fields/ABP_Ratio__c.field-meta.xml
<CustomField>
    <fullName>ABP_Ratio__c</fullName>
    <formula>0.0342</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABP Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>