force-app/main/default/objects/Account/fields/ABP_Unit__c.field-meta.xml
<CustomField>
    <fullName>ABP_Unit__c</fullName>
    <label>ABP Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kg de roupa lavada</fullName>
            </value>
            <value>
                <fullName>Quartos ocupados</fullName>
            </value>
            <value>
                <fullName>Camas ocupadas</fullName>
            </value>
            <value>
                <fullName>Refeições servidas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>