force-app/main/default/objects/Account/fields/Agreed_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Ratio__c</fullName>
    <label>Agreed Ratio</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>