force-app/main/default/objects/Account/fields/NIF__c.field-meta.xml
<CustomField>
    <fullName>NIF__c</fullName>
    <label>NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>