force-app/main/default/objects/Account/fields/Total_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Total_Calculado__c</fullName>
    <label>Total Calculado</label>
    <summarizedField>Potencial__c.Calculado__c</summarizedField>
    <summaryForeignKey>Potencial__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>