force-app/main/default/objects/Account/fields/Total_Manual__c.field-meta.xml
<CustomField>
    <fullName>Total_Manual__c</fullName>
    <label>Total Manual</label>
    <summarizedField>Potencial__c.Manual__c</summarizedField>
    <summaryForeignKey>Potencial__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>