force-app/main/default/objects/Account/recordTypes/Laundry.recordType-meta.xml
<RecordType>
    <fullName>Laundry</fullName>
    <active>true</active>
    <label>Laundry</label>
</RecordType>