force-app/main/default/objects/Account/validationRules/Account_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Read_Only</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(NumberOfEmployees)) &amp;&amp; NOT (ISCHANGED(NumberOfEmployees))</errorConditionFormula>
    <errorMessage>Account is read only.</errorMessage>
</ValidationRule>